Fix overlapped content on wp fullscreen

--- a/app/assets/stylesheets/layout/_work_package.sass
+++ b/app/assets/stylesheets/layout/_work_package.sass
@@ -176,6 +176,17 @@
     margin: .5rem .5rem 0 0
 
 .work-packages--split-view
+  .work-packages--details
+    .work-packages--attachments
+      margin-bottom: 25px
+
+.edit-all-mode
+  .work-packages--attachments
+    margin-bottom: 64px
+
+.work-package--new-state
+  margin-bottom: 55px
+
   .work-packages--attachments
     margin-bottom: 25px
 
